fixing layout issue

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -19,6 +19,7 @@
         display: flex;
         flex-direction: row-reverse;
         gap: 20px;
+        align-items: stretch;
 
         main {
             height: fit-content;
