--- a/src/components/Nav/NavContent.module.scss
+++ b/src/components/Nav/NavContent.module.scss
@@ -6,7 +6,6 @@ section.navContent {
     flex-direction: column;
     align-items: center;
     height: 100%;
-    position: relative;
 
     div.logo {
         font-size: 25px;
